@@ -277,9 +277,19 @@ EncodeServer::broadcast_received ()
 		if (_verbose) {
 			cout << "Offering services to master " << _broadcast.send_endpoint.address().to_string () << "\n";
 		}
-		shared_ptr<Socket> socket (new Socket);
+
 		try {
-			socket->connect (boost::asio::ip::tcp::endpoint (_broadcast.send_endpoint.address(), SERVER_PRESENCE_PORT));
+			shared_ptr<Socket> socket (new Socket);
+			socket->connect (boost::asio::ip::tcp::endpoint (_broadcast.send_endpoint.address(), MAIN_SERVER_PRESENCE_PORT));
+			socket->write (xml.length() + 1);
+			socket->write ((uint8_t *) xml.c_str(), xml.length() + 1);
+		} catch (...) {
+
+		}
+
+		try {
+			shared_ptr<Socket> socket (new Socket);
+			socket->connect (boost::asio::ip::tcp::endpoint (_broadcast.send_endpoint.address(), BATCH_SERVER_PRESENCE_PORT));
 			socket->write (xml.length() + 1);
 			socket->write ((uint8_t *) xml.c_str(), xml.length() + 1);
 		} catch (...) {
